terceiro commit no projeto

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,10 @@
 
     </header>
 
+    <main>
+        <h2>Contato</h2>
+    </main>
+
     <footer>
         <img class="rodape" src="AMANDA-SAGAZ-id7.png" alt="Logo Amanda Sagaz para o rodapé da página">
         <p class="copyright">&copy; Copyright Amanda Sagaz - 2023</p>
