--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <img class="banner-principal" src="planejamento-previdenciario.jpg" alt="banner planejamento">
             </div>
         </section>
-            <!--Lista de benefícios do Planejamento previdenciário-->
-            
+
+        <!--Lista de benefícios do Planejamento previdenciário-->
         <section class="beneficios">
             <h3 class="titulo-principal-1">Benefícios</h3>
 
@@ -73,6 +73,7 @@
         </section>
     </main>
 
+        <!--Rodapé da página-->
     <footer>
         <img class="rodape" src="AMANDA-SAGAZ-id7.png" alt="Logo Amanda Sagaz para o rodapé da página">
         <p class="copyright">&copy; Copyright Amanda Sagaz - 2023</p>
