--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
             <!--Primeiro parágrafo do projeto-->
             <p class="paragrafo-1">
-                O planejamento previdenciário oferece inúmeros benefícios para o futuro financeiro. <br>Ao planejar com antecedência, é possível garantir uma aposentadoria tranquila e estável, maximizando os benefícios previdenciários disponíveis. Além disso, o planejamento permite reduzir impostos, proteger o patrimônio e proporcionar segurança financeira para enfrentar imprevistos e despesas médicas. <br>Invista no seu futuro agora!
+                O planejamento previdenciário oferece inúmeros benefícios para o futuro financeiro. <br>Ao planejar com antecedência, é possível garantir uma aposentadoria tranquila e estável, maximizando os benefícios previdenciários disponíveis. Além disso, o planejamento permite reduzir impostos, proteger o patrimônio e proporcionar segurança financeira para enfrentar imprevistos e despesas médicas. <br><br>Invista no seu futuro agora!
             </p>
 
             <p class="missao">
