--- a/index.html
+++ b/index.html
@@ -41,12 +41,21 @@
             
             <!--Primeiro parágrafo do projeto-->
             <p class="paragrafo-1">
-                O planejamento previdenciário oferece inúmeros benefícios para o futuro financeiro. <br>Ao planejar com antecedência, é possível garantir uma aposentadoria tranquila e estável, maximizando os benefícios previdenciários disponíveis. Além disso, o planejamento permite reduzir impostos, proteger o patrimônio e proporcionar segurança financeira para enfrentar imprevistos e despesas médicas. <br><br>Invista no seu futuro agora!
+                O planejamento previdenciário oferece inúmeros benefícios para o futuro financeiro. <br>Ao planejar com antecedência, é possível garantir uma aposentadoria tranquila e estável, maximizando os benefícios previdenciários disponíveis. Além disso, o planejamento permite reduzir impostos, proteger o patrimônio e proporcionar segurança financeira para enfrentar imprevistos e despesas médicas. <br>
+                <br><strong>Invista no seu futuro agora!</strong>
             </p>
+
+            <h1 class="segundo-titulo">Missão, visão e valores</h1>
 
             <p class="missao">
                 <strong>Nossa missão:</strong> Garantir sua aposentadoria tranquila, maximizando benefícios e oferecendo soluções personalizadas em planejamento previdenciário.
             </p>
+
+            <p class="missao"><strong>Nossa visão:</strong> Ser referência em planejamento previdenciário, proporcionando segurança financeira e tranquilidade para nossos clientes na aposentadoria.
+
+            </p>
+
+            <p class="missao"><strong>Nossos valores:</strong> Ética, transparência, excelência, empatia e compromisso com o sucesso dos clientes no planejamento previdenciário.</p>
 
             <div class="banner">
                 <img class="banner-principal" src="planejamento-previdenciario.jpg" alt="banner planejamento">
@@ -60,13 +69,14 @@
             <div class="conteudo">
                 <ul class="lista-beneficios">
                     <li>1. Aposentadoria tranquila</li>
-                    <li>2. Maximização dos benefícios previdenciários</li>
+                    <li>2. Maximização dos benefícios</li>
                     <li>3. Redução de impostos</li>
                     <li>4. Proteção do patrimônio</li>
-                    <li>5. Segurança financeira para imprevistos</li>
+                    <li>5. Segurança financeira</li>
                     <li>6. Planejamento sucessório</li>
                     <li>7. Flexibilidade e liberdade</li>
                     <li>8. Estabilidade financeira</li>
+                    <li>9. Garantia de renda vitalícia</li>
                     <li>10. Tranquilidade emocional</li>
                 </ul><img src="banner amanda.jpg" class="banner-amanda">
             </div>
