--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,8 @@
   <!-- Link CDN CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- link CDN Icons Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <!-- Link CDN Bundle Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Amanda Sagaz Advocacia e Consultoria</title>
@@ -66,9 +67,12 @@
                 </select>
             </fieldset>
 
-            <input type="submit" value="Enviar formulário" class="enviar">
+            <input type="submit" value="Enviar" class="enviar">
         </form>
 
+        <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5547991896565" target="_blank">
+            <i class="fa fa-whatsapp"></i>
+        </a>
     </main>
 
     <footer>
