--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <!-- Link CDN Bundle Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <!--Link ícone aba-->
+  <link rel="icon" href="AMANDA-SAGAZ-id7(1).png">
     <title>Amanda Sagaz Advocacia e Consultoria</title>
 </head>
 
@@ -21,7 +23,7 @@
        
         <div class="header-logo">
              <!--LOGO DA PÁGINA-->
-            <img src="AMANDA-SAGAZ-id(1).png" alt="Logo da Advogada Amanda Sagaz">
+            <img class="img-logoprincipal" src="AMANDA-SAGAZ-id(1).png" alt="Logo da Advogada Amanda Sagaz">
 
             <!--MENU DE NAVEGAÇÃO-->
             <nav>
@@ -76,7 +78,7 @@
     </main>
 
     <footer>
-        <img class="rodape" src="AMANDA-SAGAZ-id7.png" alt="Logo Amanda Sagaz para o rodapé da página">
+        <img class="rodape" src="AMANDA-SAGAZ-id7(3).png" alt="Logo Amanda Sagaz para o rodapé da página">
         <p class="copyright">&copy; Copyright Amanda Sagaz - 2023</p>
     </footer>
 </body>
