Atualição na fonte e página principal

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             
             <!--Primeiro parágrafo do projeto-->
             <p class="paragrafo-1">
-                O planejamento previdenciário oferece inúmeros benefícios para o futuro financeiro. <br>Ao planejar com antecedência, é possível garantir uma aposentadoria tranquila e estável, maximizando os benefícios previdenciários disponíveis. Além disso, o planejamento permite reduzir impostos, proteger o patrimônio e proporcionar segurança financeira para enfrentar imprevistos e despesas médicas. <br>
-                <br><strong>Invista no seu futuro agora!</strong>
+                O planejamento previdenciário oferece inúmeros benefícios para o futuro financeiro. Ao planejar com antecedência, é possível garantir uma aposentadoria tranquila e estável, maximizando os benefícios previdenciários disponíveis. Além disso, o planejamento permite reduzir impostos, proteger o patrimônio e proporcionar segurança financeira para enfrentar imprevistos e despesas médicas. <br>
+                <br> <p class="invista">Invista no seu futuro agora!</p>
             </p>
 
             <h1 class="segundo-titulo">Missão, visão e valores</h1>
@@ -61,6 +61,33 @@
             <div class="banner">
                 <img class="banner-principal" src="planejamento-previdenciario.jpg" alt="banner planejamento">
             </div>
+
+            <h1 class="titulo-principal">Por que fazer o Planejamento Previdenciário?</h1>
+
+            <p class="paragrafo-1">
+                O planejamento previdenciário é um passo fundamental para garantir um futuro financeiramente seguro e uma aposentadoria tranquila. Com a complexidade do sistema previdenciário, é essencial contar com o apoio de profissionais especializados em direito previdenciário para orientá-lo nessa jornada.
+                <br>
+                <br>
+                Existem várias razões convincentes para investir no planejamento previdenciário. Primeiro, ele permite que você tenha controle sobre sua situação financeira na aposentadoria. Ao avaliar suas circunstâncias individuais, um advogado especializado em planejamento previdenciário pode ajudá-lo a identificar as melhores estratégias para maximizar seus benefícios e otimizar seus recursos.
+                <br>
+                <br>
+                Além disso, o planejamento previdenciário oferece a oportunidade de reduzir a carga tributária. Com o conhecimento adequado das leis e regulamentos, um advogado especializado pode ajudá-lo a explorar opções legais para minimizar os impostos associados à aposentadoria e aos benefícios previdenciários.
+                <br>
+                <br>
+                Outro benefício crucial é a proteção do patrimônio. Com o planejamento previdenciário adequado, você pode proteger seus ativos contra possíveis credores, litígios e outras situações adversas. Isso é especialmente importante quando se considera a necessidade de garantir recursos para cuidados de saúde e despesas médicas na aposentadoria.
+                <br>
+                <br>
+                Além disso, o planejamento previdenciário oferece segurança financeira em caso de imprevistos. Ao criar uma reserva financeira sólida e explorar opções de seguro e planos de renda vitalícia, você estará preparado para enfrentar desafios inesperados, como doenças graves ou incapacidades.
+                <br>
+                <br>
+                Investir no planejamento previdenciário também é uma forma de proteger e planejar sua sucessão. Um advogado especializado pode ajudá-lo a estabelecer um plano de sucessão claro e eficiente, garantindo que seus bens sejam transferidos de acordo com seus desejos e minimizando possíveis disputas familiares.
+                <br>
+                <br>
+                Por fim, fazer o planejamento previdenciário oferece tranquilidade emocional. Ao tomar medidas proativas para garantir sua segurança financeira futura, você pode desfrutar da vida com confiança e tranquilidade, sabendo que suas necessidades serão atendidas durante a aposentadoria.
+                <br>
+                <br>
+                Em suma, o planejamento previdenciário é uma medida inteligente e necessária para garantir um futuro financeiramente estável. Ao contar com a orientação e expertise de um advogado especializado, você estará tomando medidas concretas para proteger seus interesses e garantir uma aposentadoria segura e próspera. Não deixe seu futuro ao acaso, invista no planejamento previdenciário e assegure seu bem-estar financeiro a longo prazo.
+            </p>
         </section>
 
         <!--Lista de benefícios do Planejamento previdenciário-->
