--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- link CDN Icons Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-  <!-- Link CDN Bundle Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <!--Link ícone aba-->
   <link rel="icon" href="AMANDA-SAGAZ-id7(1).png">
     <title>Amanda Sagaz Advocacia e Consultoria</title>
@@ -42,8 +40,7 @@
             
             <!--Primeiro parágrafo do projeto-->
             <p class="paragrafo-1">
-                O planejamento previdenciário oferece inúmeros benefícios para o futuro financeiro. Ao planejar com antecedência, é possível garantir uma aposentadoria tranquila e estável, maximizando os benefícios previdenciários disponíveis. Além disso, o planejamento permite reduzir impostos, proteger o patrimônio e proporcionar segurança financeira para enfrentar imprevistos e despesas médicas. <br>
-                <br> <p class="invista">Invista no seu futuro agora!</p>
+                O planejamento previdenciário oferece inúmeros benefícios para o futuro financeiro. Ao planejar com antecedência, é possível garantir uma aposentadoria tranquila e estável, maximizando os benefícios previdenciários disponíveis. Além disso, o planejamento permite reduzir impostos, proteger o patrimônio e proporcionar segurança financeira para enfrentar imprevistos e despesas médicas. Invista no seu futuro agora!
             </p>
 
             <h1 class="segundo-titulo">Missão, visão e valores</h1>
