--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <!--Lista de benefícios do Planejamento previdenciário-->
         <section class="beneficios">
-            <h3 class="titulo-principal-1">Benefícios</h3>
+            <h1 class="titulo-principal-1">Benefícios</h1>
 
             <div class="conteudo">
                 <ul class="lista-beneficios">
@@ -103,7 +103,7 @@
                     <li>8. Estabilidade financeira</li>
                     <li>9. Garantia de renda vitalícia</li>
                     <li>10. Tranquilidade emocional</li>
-                </ul><img src="banner amanda.jpg" class="banner-amanda">
+                </ul><img class="imagem-maos" src="banner amanda.jpg" class="banner-amanda">
             </div>
         </section>
     </main>
