--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-  <!-- Link CDN CSS Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!-- link CDN Icons Bootstrap -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-  <!--Link ícone aba-->
-  <link rel="icon" href="AMANDA-SAGAZ-id7(1).png">
-  <title>Amanda Sagaz Advocacia e Consultoria</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--Folha de estilização CSS-->
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="reset.css">
+      <!--Fonte da página-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+      <!-- Link CDN CSS Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <!-- link CDN Icons Bootstrap -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+      <!--Link ícone aba-->
+      <link rel="icon" href="AMANDA-SAGAZ-id7(1).png">
+        <title>Amanda Sagaz Advocacia e Consultoria</title>
+    </head>
 
 <body>
     <header>
-       
         <div class="header-logo">
              <!--LOGO DA PÁGINA-->
             <img class="img-logoprincipal" src="AMANDA-SAGAZ-id(1).png" alt="Logo da Advogada Amanda Sagaz">
@@ -32,10 +32,10 @@
                 </ul>
             </nav>
         </div>
-
     </header>
 
     <main>
+        <!--Formulário de contato-->
         <form>
             <label for="nomecompleto">Nome completo</label>
             <input type="text" id="nomecompleto" class="input-padrao" required placeholder="José da Silva">
@@ -59,6 +59,7 @@
             </fieldset>
 
             <fieldset>
+                <!--Seletor para definir qual o melhor horário de contato-->
                 <legend>Qual o melhor horário para entrarmos em contato?</legend>
                 <select>
                     <option>Manhã</option>
@@ -69,7 +70,7 @@
 
             <input type="submit" value="Enviar" class="enviar">
         </form>
-
+        <!--Botão WhatsApp-->
         <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5547991896565" target="_blank">
             <i class="fa fa-whatsapp"></i>
         </a>
