--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Folha de estilização CSS-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+  <!--Fonte da página-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   <!-- Link CDN CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -45,20 +47,20 @@
 
             <h1 class="segundo-titulo">Missão, visão e valores</h1>
 
+            <!--Missão, visão e valores-->
             <p class="missao">
                 <strong>Nossa missão:</strong> Garantir sua aposentadoria tranquila, maximizando benefícios e oferecendo soluções personalizadas em planejamento previdenciário.
             </p>
-
             <p class="missao"><strong>Nossa visão:</strong> Ser referência em planejamento previdenciário, proporcionando segurança financeira e tranquilidade para nossos clientes na aposentadoria.
-
             </p>
-
             <p class="missao"><strong>Nossos valores:</strong> Ética, transparência, excelência, empatia e compromisso com o sucesso dos clientes no planejamento previdenciário.</p>
 
+            <!--Banner principal da página-->
             <div class="banner">
                 <img class="banner-principal" src="planejamento-previdenciario.jpg" alt="banner planejamento">
             </div>
 
+            <!--Texto principal da página inicial-->
             <h1 class="titulo-principal">Por que fazer o Planejamento Previdenciário?</h1>
 
             <p class="paragrafo-1">
@@ -103,12 +105,14 @@
                     <li>8. Estabilidade financeira</li>
                     <li>9. Garantia de renda vitalícia</li>
                     <li>10. Tranquilidade emocional</li>
+
+                <!--Imagem dos benefícios-->
                 </ul><img class="imagem-maos" src="banner amanda.jpg" class="banner-amanda">
             </div>
         </section>
     </main>
 
-        <!--Rodapé da página-->
+        <!--Rodapé da página - Copyright-->
     <footer>
         <img class="rodape" src="AMANDA-SAGAZ-id7(3).png" alt="Logo Amanda Sagaz para o rodapé da página">
         <p class="copyright">&copy; Copyright Amanda Sagaz - 2023</p>
