--- a/about.html
+++ b/about.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-  <!-- Link CDN CSS Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!-- link CDN Icons Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-  <!-- Link CDN Bundle Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>Amanda Sagaz Advocacia e Consultoria</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--Folha de estilização CSS-->
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="reset.css">
+      <!--Fonte da página-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+      <!-- Link CDN CSS Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <!-- link CDN Icons Bootstrap -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+      <!--Link ícone aba-->
+      <link rel="icon" href="AMANDA-SAGAZ-id7(1).png">
+        <title>Amanda Sagaz Advocacia e Consultoria</title>
+    </head>
 
 <body>
     <header>
        
         <div class="header-logo">
              <!--LOGO DA PÁGINA-->
-            <img src="AMANDA-SAGAZ-id(1).png" alt="Logo da Advogada Amanda Sagaz">
+            <img class="img-logoprincipal" src="AMANDA-SAGAZ-id(1).png" alt="Logo da Advogada Amanda Sagaz">
 
             <!--MENU DE NAVEGAÇÃO-->
             <nav>
@@ -35,7 +37,7 @@
     </header>
 
     <main>
-        <h3 class="sobre">Sobre Amanda Sagaz</h3>
+        <h1 class="sobre">Sobre Amanda Sagaz</h1>
 
         <section class="about-principal">
             <img class="foto-amanda" src="AmandaSagaz.jpeg">
@@ -61,13 +63,11 @@
                 <br>
                 Contate Amanda Sagaz hoje mesmo e inicie sua jornada em direção a uma aposentadoria tranquila e financeiramente segura. Você estará em boas mãos com uma profissional que prioriza seu bem-estar e sucesso no planejamento previdenciário.
             </p>
-
         </section>
-
     </main>
 
     <footer>
-        <img class="rodape" src="AMANDA-SAGAZ-id7.png" alt="Logo Amanda Sagaz para o rodapé da página">
+        <img class="rodape" src="AMANDA-SAGAZ-id7(3).png" alt="Logo Amanda Sagaz para o rodapé da página">
         <p class="copyright">&copy; Copyright Amanda Sagaz - 2023</p>
     </footer>
 </body>
