--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -9,7 +9,8 @@
   <!-- Link CDN CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- link CDN Icons Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <!-- Link CDN Bundle Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Amanda Sagaz Advocacia e Consultoria</title>
@@ -17,10 +18,9 @@
 
 <body>
     <header>
-       
         <div class="header-logo">
              <!--LOGO DA PÁGINA-->
-            <img src="AMANDA-SAGAZ-id(1).png" alt="Logo da Advogada Amanda Sagaz">
+            <img class="img-logoprincipal" src="AMANDA-SAGAZ-id(1).png" alt="Logo da Advogada Amanda Sagaz">
 
             <!--MENU DE NAVEGAÇÃO-->
             <nav>
@@ -31,10 +31,10 @@
                 </ul>
             </nav>
         </div>
-
     </header>
 
     <main>
+        <!--Formulário de contato-->
         <form>
             <label for="nomecompleto">Nome completo</label>
             <input type="text" id="nomecompleto" class="input-padrao" required placeholder="José da Silva">
@@ -43,7 +43,7 @@
             <input type="text" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
             <label for="telefone">Telefone</label>
-            <input type="number" id="telefone" class="input-padrao" required placeholder="(XX) 9XXXX-XXXX">
+            <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) 9XXXX-XXXX">
 
             <label for="mensagem">Mensagem</label>
             <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required placeholder="Digite sua dúvida"></textarea>
@@ -58,6 +58,7 @@
             </fieldset>
 
             <fieldset>
+                <!--Seletor para definir qual o melhor horário de contato-->
                 <legend>Qual o melhor horário para entrarmos em contato?</legend>
                 <select>
                     <option>Manhã</option>
@@ -66,13 +67,16 @@
                 </select>
             </fieldset>
 
-            <input type="submit" value="Enviar formulário" class="enviar">
+            <input type="submit" value="Enviar" class="enviar">
         </form>
-
+        <!--Botão WhatsApp-->
+        <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5547991896565" target="_blank">
+            <i class="fa fa-whatsapp"></i>
+        </a>
     </main>
 
     <footer>
-        <img class="rodape" src="AMANDA-SAGAZ-id7.png" alt="Logo Amanda Sagaz para o rodapé da página">
+        <img class="rodape" src="AMANDA-SAGAZ-id7(3).png" alt="Logo Amanda Sagaz para o rodapé da página">
         <p class="copyright">&copy; Copyright Amanda Sagaz - 2023</p>
     </footer>
 </body>
