--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
             <i class="fa fa-whatsapp"></i>
         </a>
     </main>
-
-        <!--Rodapé da página - Copyright-->
-    <footer>
-        <img class="rodape" src="AMANDA-SAGAZ-id7(3).png" alt="Logo Amanda Sagaz para o rodapé da página">
-        <p class="copyright">&copy; Copyright Amanda Sagaz - 2023</p>
-    </footer>
 </body>
+
+<!--Rodapé página-->
+
+<footer>
+    <img class="rodape" src="AMANDA-SAGAZ-id7(3).png" alt="Logo Amanda Sagaz para o rodapé da página">
+    <p class="copyright">&copy; Copyright Amanda Sagaz - 2023</p>
+</footer>
 </html>
